# project-rag

./: .gitignore  BENCHMARKING.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  Cargo.toml  NOTES.md  README.md  SLASH_COMMANDS.md  TESTING.md
benches/: indexing_benchmark.rs
docs/: INDEX_LOCKING.md  NOTES.md  PRODUCTION_READY.md  SLASH_COMMANDS.md  SLASH_COMMANDS_SUMMARY.md  TEST_RESULTS.md
examples/: test_git_search.rs
src/: bm25_search.rs  cache.rs  client.rs  config.rs  error.rs  git_cache.rs  lib.rs  main.rs  mcp_server.rs  paths.rs  types.rs
src/bm25_search/: mod.rs
src/client/: git_indexing.rs  index_lock.rs  indexing.rs  mod.rs  tests.rs
src/client/indexing/: mod.rs  tests.rs
src/config/: mod.rs
src/embedding/: fastembed_manager.rs
src/git/: chunker.rs  mod.rs  walker.rs
src/indexer/: ast_parser.rs  chunker.rs  file_walker.rs  mod.rs
src/mcp_server/: git_indexing.rs  indexing.rs  tests.rs
src/types/: mod.rs  tests.rs
src/vector_db/: lance_client.rs  mod.rs  qdrant_client.rs  usearch_client.rs
src/vector_db/lance_client/: mod.rs  tests.rs
tests/: git_search_integration.rs  simple_integration.rs
