[package]
name = "project-rag"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
tokio = { version = "1.43", features = ["full"] }
qdrant-client = "1.15"
fastembed = "5.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
sha2 = "0.10"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "project_rag"
path = "src/lib.rs"

[[bin]]
name = "project-rag"
path = "src/main.rs"
