[package]
name = "project-rag"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
tokio = { version = "1.43", features = ["full"] }
# Vector databases - USearch is default (embedded, fastest), others are optional
usearch = "2.21"
lancedb = { version = "0.10", optional = true }
arrow-array = { version = "52.2", optional = true }
arrow-schema = { version = "52.2", optional = true }
futures = { version = "0.3", optional = true }
qdrant-client = { version = "1.15", optional = true }
fastembed = "5.1"
tantivy = "0.22"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
sha2 = "0.10"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["usearch-backend"]
usearch-backend = []
lancedb-backend = ["lancedb", "arrow-array", "arrow-schema", "futures"]
qdrant-backend = ["qdrant-client"]

[lib]
name = "project_rag"
path = "src/lib.rs"

[[bin]]
name = "project-rag"
path = "src/main.rs"
