[package]
name = "project-rag"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.8", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
tokio = { version = "1.43", features = ["full"] }
# Vector databases - LanceDB is default (embedded, stable), Qdrant is optional (external)
lancedb = "0.10"
arrow-array = "52.2"
arrow-schema = "52.2"
futures = "0.3"
qdrant-client = { version = "1.15", optional = true }
fastembed = "5.1"
tantivy = "0.22"
git2 = "0.19"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
regex = "1.10"
chrono = "0.4"
dirs = "5.0"
sha2 = "0.10"
ignore = "0.4"
globset = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
# CLI and configuration
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2.0"
toml = "0.8"
# Performance
rayon = "1.10"

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["async_tokio"] }
filetime = "0.2"

[build-dependencies]
chrono = "0.4"

[features]
default = ["lancedb-backend"]
lancedb-backend = []
qdrant-backend = ["qdrant-client"]

[lib]
name = "project_rag"
path = "src/lib.rs"

[[bin]]
name = "project-rag"
path = "src/main.rs"

[[bench]]
name = "indexing_benchmark"
harness = false
